# sphsol-release

./: CMakeLists.txt  LICENSE  README.md
Input/: 0-Particles.csv  1-Settings.txt  2-Materials.txt  ADD-Trajectory.csv
PrePost/mathilde_sim/: MathildeSH.ply  create_particles.py  mathilde_simu.py  mathilde_simu_2nd.py
example/: create_particles.py  test.py
src/: addforce.cc  boundary.cc  boundary.h  dbscan.cc  dbscan.h  equations.cc  global.h  grid.cc  grid.h  input.cc  kdtree.cc  kdtree.h  kernel.cc  kernel.h  main.cc  material.h  math.cc  math.h  output.cc  output.h  particle.h  physics.cc  physics.h  solver.cc  solver.h
